<resources>
    <string name="app_name">Weather App</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="created_by">Created By</string>
    <string name="humidity">Humidity</string>
    <string name="temp">%s℃</string>
    <string name="unknown">…</string>
</resources>