<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        tools:context=".view.MainActivity">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Address" />

        <TextView
            android:id="@+id/time_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            tools:text="Time Update" />

        <TextView
            android:id="@+id/status_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Summer" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22" />

        <TextView
            android:id="@+id/min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature"
            tools:text="min: 10" />

        <TextView
            android:id="@+id/max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/temperature"
            app:layout_constraintTop_toBottomOf="@+id/temperature"
            tools:text="max: 22" />

        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/min_temp" />

        <View
            android:id="@+id/view2"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <View
            android:id="@+id/view3"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:background="@drawable/bg_border"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <View
            android:id="@+id/view4"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_border"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view5"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:background="@drawable/bg_border"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <View
            android:id="@+id/view6"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_border"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_sunrise"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/sunrise"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_sunset"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/sunset"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_wind"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/wind"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_pressure"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/pressure"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_humidity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/humidity"
            app:layout_constraintEnd_toEndOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toTopOf="@+id/view5"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/info"
            app:layout_constraintEnd_toEndOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/view6"
            app:layout_constraintTop_toTopOf="@+id/view6"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sunrise"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_sunrise"
            app:layout_constraintStart_toStartOf="@+id/img_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/img_sunrise" />

        <TextView
            android:id="@+id/title_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sunset"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_sunset"
            app:layout_constraintStart_toStartOf="@+id/img_sunset"
            app:layout_constraintTop_toBottomOf="@+id/img_sunset" />

        <TextView
            android:id="@+id/title_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wind"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_wind"
            app:layout_constraintStart_toStartOf="@+id/img_wind"
            app:layout_constraintTop_toBottomOf="@+id/img_wind" />

        <TextView
            android:id="@+id/title_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pressure"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_pressure"
            app:layout_constraintStart_toStartOf="@+id/img_pressure"
            app:layout_constraintTop_toBottomOf="@+id/img_pressure" />

        <TextView
            android:id="@+id/title_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_humidity"
            app:layout_constraintStart_toStartOf="@+id/img_humidity"
            app:layout_constraintTop_toBottomOf="@+id/img_humidity" />

        <TextView
            android:id="@+id/title_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/created_by"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_info"
            app:layout_constraintStart_toStartOf="@+id/img_info"
            app:layout_constraintTop_toBottomOf="@+id/img_info" />

        <TextView
            android:id="@+id/tv_sunrise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/title_sunrise"
            app:layout_constraintStart_toStartOf="@+id/title_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/title_sunrise"
            tools:text="10" />

        <TextView
            android:id="@+id/tv_sunset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="@+id/title_sunset"
            app:layout_constraintStart_toStartOf="@+id/title_sunset"
            app:layout_constraintTop_toBottomOf="@+id/title_sunset"
            tools:text="10" />

        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/title_wind"
            app:layout_constraintStart_toStartOf="@+id/title_wind"
            app:layout_constraintTop_toBottomOf="@+id/title_wind"
            tools:text="10" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="@+id/title_pressure"
            app:layout_constraintStart_toStartOf="@+id/title_pressure"
            app:layout_constraintTop_toBottomOf="@+id/title_pressure"
            tools:text="10" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="@+id/title_humidity"
            app:layout_constraintStart_toStartOf="@+id/title_humidity"
            app:layout_constraintTop_toBottomOf="@+id/title_humidity"
            tools:text="10" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="@+id/title_info"
            app:layout_constraintStart_toStartOf="@+id/title_info"
            app:layout_constraintTop_toBottomOf="@+id/title_info"
            tools:text="10" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>